# agent-runtime-template

./: .gitignore  AGENTS.md  README.md  __init__.py  local_runtime.py  pyproject.toml  requirements.txt
agent_runtime/: __init__.py  local_runtime.py
core/: function_tool_executor.py  hooks.py  hooks_chain.py  mcp_client.py  response.py  session_context.py  tool.py  tool_image_cache.py
docs/: SDK_REFERENCE.md
examples/: __init__.py  driver.py  example_provider.py  fs_demo.py  local_runtime_demo.py  mcp_demo.py  plan_execute_demo.py  planning_demo.py  plugin_demo.py  skills_demo.py
extensions/: __init__.py
foundation/: __init__.py  config.py  io_utils.py  log.py  network.py  paths.py
media/: media_utils.py
message/: message_event_result.py
provider/: entities.py  func_tool_manager.py  provider.py  register.py
tests/: conftest.py  fakes.py  test_audits.py  test_context_store.py  test_fs_build.py  test_fs_list_dir.py  test_fs_path_guard.py  test_fs_read_file.py  test_hooks_chain.py  test_local_agent.py  test_local_runtime.py  test_logging.py  test_message_chain.py  test_on_before_complete.py  test_on_llm_request_hook.py  test_plan_execute_assembly.py  test_plan_execute_liveness.py  test_plan_execute_runner.py  test_planning_assembly.py  test_planning_e2e.py  test_planning_hook.py  test_planning_store.py  test_planning_tool.py  test_plugin_composite_hooks.py  test_plugin_contributions.py  test_plugin_end_to_end.py  test_plugin_manager.py  test_plugin_skeleton.py  test_plugin_skill_dirs.py  test_provider_kwargs_forwarding.py  test_react_loop.py  (+4 more)
(+91 files in other folders)
