[project]
name = "agent-runtime"
version = "0.1.0"
description = "A framework-agnostic Agent runtime + LLM provider template."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.12"

keywords = ["agent", "llm", "runtime", "react", "openai", "anthropic"]

dependencies = [
  "aiohttp>=3.11.18",
  "anthropic>=0.51.0",
  "certifi>=2025.4.26",
  "deprecated>=1.2.18",
  "docstring-parser>=0.16",
  "httpx>=0.28.1",
  "jsonschema>=4.0",
  "mcp>=1.8.0",
  "openai>=1.78.0",
  "pillow>=11.2.1",
  "pydantic>=2.12.5",
  "pydub>=0.25.1",
  "pyyaml>=6.0",
  "socksio>=1.0.0",
  "tenacity>=8.0",
  "typing_extensions>=4.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_runtime"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Keep the lint posture light to avoid churning the ported code.
select = ["F", "E4", "E7", "E9", "W", "I"]
ignore = ["E402"]  # module-level import order is noisy in ported files

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]
